--- a/app.json
+++ b/app.json
@@ -2,7 +2,9 @@
   "pages":[
     "pages/index/index",
     "pages/logs/logs",
-    "pages/register/register"
+    "pages/register/register",
+    "pages/main/main",
+    "pages/info/info"
   ],
   "window":{
     "backgroundTextStyle":"light",
