--- a/project.config.json
+++ b/project.config.json
@@ -15,6 +15,8 @@
 	"appid": "wxc761787fa285b1d3",
 	"projectname": "%E9%93%83%E9%93%9B%E6%8E%A8%E5%B9%BF",
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
